@@ -1,3 +1,9 @@
+2009-07-17  Brian Gough  <bjg@network-theory.co.uk>
+
+	* hyperg_U.c (hyperg_U_series): use a rearrangement of the factor
+	in front of the series to avoid incorrect termination when the
+	the leading term is zero.
+
 2009-07-16  Brian Gough  <bjg@network-theory.co.uk>
 
 	* poch.c (gsl_sf_lnpoch_sgn_e): handle negative and zero values of
