@@ -6,7 +6,8 @@
 
 ** The confluent hypergeometric function gsl_sf_hyperg_U (a,b,x) now
    handles some cases where x=0. The case where 1+a-b is a negative
-   integer no longer returns an error [bug #22859].
+   integer no longer returns an error [bug #22859] and the incorrect
+   termination of the series in certain cases is fixed [bug #26706].
 
 ** Added a new function gsl_poly_eval_derivs to evaluate a polynomial
    and its derivatives simultaneously.
